src/charts/kubernetes-dashboard/node_port_service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  ports:
    - port: 443
      nodePort: 31000
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
